--- a/TODO
+++ b/TODO
@@ -4,4 +4,8 @@ Check site for broken links
 
 Check compatibility in firefox, IE, safari, safari mobile, android mobile
 
-Add links from our old personal pages (e.g. UMN)
+Add links from
+ - old personal pages
+ - github
+ - linked in
+ - others?
